[workspace]
resolver = "2"
members = [
    "packages/qwen-core",
    "packages/miniqwen-cli",
    "packages/miniqwen-python",
    "packages/miniqwen-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tianze <tianzeshi_study@outlook.com>"]
license = "MIT"
[workspace.dependencies]
# 统一管理版本
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ureq = { version = "3", default-features = false, features = ["rustls"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.10"
ndarray = "0.15.6"
async-stream = "0.3"
